--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,22 +15,22 @@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="padding-top: 10px;">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="padding-top: 10px;">
                 <label asp-for="MiddleName" class="control-label"></label>
                 <input asp-for="MiddleName" class="form-control" />
                 <span asp-validation-for="MiddleName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="padding-top: 10px;">
                 <label asp-for="BirthDate" class="control-label"></label>
                 <input asp-for="BirthDate" class="form-control" />
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>  
+            <div class="form-group" style="padding-top: 10px;">
                 <input type="submit" value="Download" class="btn btn-primary" />
             </div>
         </form>
